# python_develop_template

./: .editorconfig  .env.dev  .gitignore  .mypy.ini  .pycodestyle  .pyinstaller.spec  .pylintrc  .pytest.ini  Makefile  README.md  pyproject.toml
src/python_develop_template/: main.py
tests/: test_case1.py  test_case2.py
